// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders button with custom variant 1`] = `
<button
  class="  rounded-[100px] block font-[600] border py-3 px-4 text-sm items-center shadow-sm
       
          disabled:cursor-not-allowed bg-red-600 text-white hover:bg-red-500"
  type="button"
>
  <span
    class="flex items-center justify-center gap-3"
  >
    Delete
  </span>
</button>
`;

exports[`Button component renders button with default props 1`] = `
<button
  class="  rounded-[100px] block font-[600] border py-3 px-4 text-sm items-center shadow-sm
       
          disabled:cursor-not-allowed bg-primary text-white disabled:opacity-50"
  type="button"
>
  <span
    class="flex items-center justify-center gap-3"
  >
    Click me
  </span>
</button>
`;

exports[`Button component renders button with left and right icons 1`] = `
<button
  class="  rounded-[100px] block font-[600] border py-3 px-4 text-sm items-center shadow-sm
       
          disabled:cursor-not-allowed bg-primary text-white disabled:opacity-50"
  type="button"
>
  <span
    class="flex items-center justify-center gap-3"
  >
    <i
      class="left-icon"
    />
    Click me
    <i
      class="right-icon"
    />
  </span>
</button>
`;
